  * Modified dm.test to give error when variance is zero
  * Corrected help file for splinef().
  * Fixed arima.errors() to handle Box-Cox transformed models.
  * Modified auto.arima() to be stricter on near-unit-roots.
  * Fixed typo in accuracy help file regarding RMSE
  * Improved handling of constant series in Arima() and forecast.Arima().
  * Added plot.Arima() and plot.ar() functions.

Version 5.9 (26 February 2015)
  * Improved documentation of accuracy() function.
  * Fixed occasional bug in accuracy() when test set is a single observation.
  * Improved Acf() to give better handling of horizontal axis for seasonal data or when ... is passed.
  * Removed print.Arima and predict.Arima and added print.ARIMA
  * method argument now passed when re-fitting an ARIMA model.
  * Fixed error when CH test applied to short series

Version 5.8 (6 January 2015)
  * Fixed bug in versions of R before 3.10 when using fourier and fourierf.
  * Made BoxCox.lambda() robust to missing values.

Version 5.7 (17 December 2014)
  * Fixed bug in tbats/bats where optional arguments were not being passed to auto.arima().
  * Revised fourier() and fourierf() to avoid large orders, and to avoid zero columns.
  * Improved accuracy of fourier() and fourierf(), while simplifying the code.
  * Removed duplicate columns returned by fourier/fourierf with multiple seasonal periods.
  * Corrected some bugs in simulate.Arima for models involving xreg.
  * Centred simulations from simulate.Arima for non-stationary models by conditioning on first observation.
  * Added findfrequency() function.
  * Fixed error in computed residuals from forecast.stl().
  * Improved handling of very short series in auto.arima().
  * Fixed error in forecasting with additive damped models. Damping previously applied only from second forecast horizon.
  * Fixed misuse of abs() in two places in C code.
  * Added na.action argument to Acf() and fixed na.action argument in tsdisplay().

Version 5.6 (23 September 2014)