@@ -6,6 +6,8 @@ Version 5.10 (?? 2015)
   * Fixed typo in accuracy help file regarding RMSE
   * Improved handling of constant series in Arima() and forecast.Arima().
   * Added plot.Arima() and plot.ar() functions.
+  * Captured problem in bats/tbats where data are constant.
+  * Fixed bug in forecasts from bats which labelled them as TBATS.
 
 Version 5.9 (26 February 2015)
   * Improved documentation of accuracy() function.
